@@ -11,6 +11,7 @@
  * Avoid grouping sstables for anticompaction with DTCS (CASSANDRA-9900)
  * UDF / UDA execution time in trace (CASSANDRA-9723)
  * Fix broken internode SSL (CASSANDRA-9884)
+ * Expose phi values from failure detector via JMX and tweak debug and trace logging (CASSANDRA-9526)
 Merged from 2.1:
  * (cqlsh) Allow encoding to be set through command line (CASSANDRA-10004)
  * Add new JMX methods to change local compaction strategy (CASSANDRA-9965)
